--- a/home/views/layouts/main.handlebars
+++ b/home/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="../../public/css/materialize.min.css" media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -15,7 +15,7 @@
 <header>
     <nav class="teal">
         <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo left">refugeeProject</a>
+            <a href="/" class="brand-logo left">refugeeProject</a>
             <ul class="right">
                 <li><a href="/"><i class="material-icons left">language</i>Language</a></li>
                 <li><a href="/"><i class="material-icons left">account_circle</i>LogIn</a></li>
@@ -38,8 +38,8 @@
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Impressum</a></li>
+                    <li><a class="grey-text text-lighten-3" href="/">About</a></li>
+                    <li><a class="grey-text text-lighten-3" href="/">Impressum</a></li>
                 </ul>
             </div>
         </div>
@@ -50,6 +50,6 @@
 </footer>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="../../public/js/materialize.min.js"></script>
 </body>
 </html>
