--- a/home/public/partials/login.html
+++ b/home/public/partials/login.html
@@ -1,7 +1,9 @@
 <div class="container">
-    <div class="row">
-        <div class="col s12">
-            <h1>Login.</h1>
+        <div class="center">
+            <a href="" class="waves-effect waves-teal btn-flat" ng-click="loginCtrl.setTab(1)">Login</a>
+            <a href="" class="waves-effect waves-teal btn-flat" ng-click="loginCtrl.setTab(2)">Register</a>
         </div>
-    </div>
+    <div class="divider"></div>
+        <div login-tab ng-show="loginCtrl.isTab(1)"></div>
+        <div register-tab ng-show="loginCtrl.isTab(2)"></div>
 </div>
