--- a/home/public/partials/register-tab.html
+++ b/home/public/partials/register-tab.html
@@ -1,21 +1,33 @@
-<ng-form>
+<form name="registerForm" ng-submit="regtabCtrl.registerUser()" novalidate>
     <div class="row">
-        <div class="col s12 input-field">
-            <input id="email" type="email">
+        <div class="col s12 m6 offset-m6 pull-m6 input-field">
+            <input ng-model="user.email" id="email" type="email" required>
             <label for="email">E-Mail</label>
         </div>
-    </div>
-    <div class="row">
-        <div class="col s12 m6 input-field">
-            <input id="username" type="text">
+        <!--TODO: eventuell eine directive, die username asynchron auf existenz prüft-->
+        <div class="col s12 m6 offset-m6 pull-m6 input-field">
+            <input ng-model="user.username" id="username" type="text" required>
             <label for="username">Username</label>
         </div>
+
         <div class="col s12 m6 input-field">
-            <input id="password" type="password">
+            <input ng-model="user.name" id="forename" type="text" required>
+            <label for="forename">Name</label>
+        </div>
+        <div class="col s12 m6 input-field">
+            <input ng-model="user.surname" id="surname" type="text" required>
+            <label for="surname">Surname</label>
+        </div>
+        <div class="col s12 m6 input-field">
+            <input ng-model="user.password" id="password" type="password" required minlength="6">
             <label for="password">Password</label>
+        </div>
+        <div class="col s12 m6 input-field">
+            <input ng-model="confirmPassword" id="confirm_password" type="password" validate-password>
+            <label for="confirm_password">Confirm Password</label>
         </div>
     </div>
     <div class="row">
-        <a class="waves-teal waves-effect btn right" type="submit">Register</a>
+        <input class="waves-teal waves-effect btn right" ng-class="{disabled:!registerForm.$valid}" type="submit" value="Register">
     </div>
-</ng-form>
+</form>
