--- a/home/public/partials/login-tab.html
+++ b/home/public/partials/login-tab.html
@@ -1,10 +1,10 @@
 <ng-form>
     <div class="input-field">
-        <input id="username" type="text">
+        <input ng-model="logintabCtrl.user.username" id="username" type="text">
         <label for="username">Username</label>
     </div>
     <div class="input-field">
-        <input id="password" type="password">
+        <input ng-model="logintabCtrl.user.password" id="password" type="password">
         <label for="password">Password</label>
     </div>
     <a class="waves-teal waves-effect btn right" type="submit">Login</a>
