added new files for list, guidelist, details and add

--- a/home/public/css/stylesheet.css
+++ b/home/public/css/stylesheet.css
@@ -30,3 +30,7 @@ textarea.materialize-textarea:focus.ng-invalid {
     border-bottom: 1px solid #F44336;
     box-shadow: 0 1px 0 0 #F44336;
 }
+
+nav.top-nav {
+    margin-bottom: 8px;
+}
