--- a/home/public/partials/login.html
+++ b/home/public/partials/login.html
@@ -1,9 +1,11 @@
 <div class="container">
-        <div class="center">
-            <a href="" class="waves-effect waves-teal btn-flat" ng-click="loginCtrl.setTab(1)">Login</a>
-            <a href="" class="waves-effect waves-teal btn-flat" ng-click="loginCtrl.setTab(2)">Register</a>
-        </div>
-    <div class="divider"></div>
-        <div login-tab ng-show="loginCtrl.isTab(1)"></div>
-        <div register-tab ng-show="loginCtrl.isTab(2)"></div>
+    <div class="center">
+        <ul class="tabs">
+            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(1)">Login</a></li>
+            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(2)">Register</a></li>
+        </ul>
+    </div>
+
+    <div login-tab ng-show="loginCtrl.isTab(1)"></div>
+    <div register-tab ng-show="loginCtrl.isTab(2)"></div>
 </div>
