--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -9,11 +9,12 @@
             </div>
         </div>
     </nav>
-    <!-- side navbar, is only permanent on large displays small and medium sized displays show a menu icon to slide the navbar in and out -->
+    <!-- side navbar, is only permanent on large displays small and medium sized displays show a menu icon to slide the navbar in-->
     <ul id="nav-mobile" class="side-nav fixed" style="overflow: auto; transform: translateX(0px);">
         <li class="center brand-logo"><i style="margin-top: 16px;" class="material-icons large">account_circle</i></li>
         <div class="divider"></div>
         <li><a class="waves-effect waves-orange" href="#/login">Login/Register</a></li>
+        <li><a class="waves-effect waves-orange" href="#/lang">Language</a></li>
         <li class="no-padding">
             <ul class="collapsible">
                 <li><a class="collapsible-header waves-effect waves-orange">Modify</a>
@@ -25,10 +26,17 @@
                         </ul>
                     </div>
                 </li>
+                <li><a class="waves-effect waves-orange collapsible-header">API</a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a class="waves-effect waves-orange" href="/api">/api/</a></li>
+                            <li><a class="waves-effect waves-orange" href="/api/v1">/api/v1</a></li>
+                            <li><a class="waves-effect waves-orange" href="/api/v1/">/api/v1/guides</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </li>
-        <li><a class="waves-effect waves-orange" href="#/lang">Language</a></li>
-        <li><a class="waves-effect waves-orange" href="/api">API</a></li>
         <li><a class="waves-effect waves-orange" href="#/doc">Documentation</a></li>
     </ul>
 </header>
