--- a/home/public/partials/login-tab.html
+++ b/home/public/partials/login-tab.html
@@ -1,11 +1,11 @@
-<ng-form>
+<form ng-submit="logintabCtrl.login()">
     <div class="input-field">
-        <input ng-model="logintabCtrl.user.username" id="username" type="text">
+        <input ng-model="logintabCtrl.user['username']" id="username" type="text">
         <label for="username">Username</label>
     </div>
     <div class="input-field">
-        <input ng-model="logintabCtrl.user.password" id="password" type="password">
+        <input ng-model="logintabCtrl.user['password']" id="password" type="password">
         <label for="password">Password</label>
     </div>
-    <a class="waves-teal waves-effect btn right" type="submit">Login</a>
-</ng-form>
+    <a class="waves-teal waves-effect btn right" ng-click="logintabCtrl.login()" ng-disabled="disabled" type="submit">Login</a>
+</form>
