--- a/home/public/partials/login.html
+++ b/home/public/partials/login.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="center">
         <ul class="tabs">
-            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(1)">Login</a></li>
-            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(2)">Register</a></li>
+            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(1)">{{'LOGIN_TABLOGIN'|translate}}</a></li>
+            <li class="tab col s6"><a href="" ng-click="loginCtrl.setTab(2)">{{'LOGIN_TABREGISTER'|translate}}</a></li>
             <div class="indicator"></div>
         </ul>
     </div>
