--- a/home/public/partials/main.html
+++ b/home/public/partials/main.html
@@ -1,20 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col s12">
-            <h1>Willkommen.</h1>
+            <h1>{{'MAIN_TITLE'|translate}}</h1>
         </div>
     </div>
     <div class="row">
         <div class="col l4 m6 s12">
-            <p class="flow-text center">Diese Seite dient dazu, die Inhalte der dazugehörigen App zu erstellen,
-                bearbeiten und löschen.</p>
+            <p class="flow-text center">{{'MAIN_TEXT1'|translate}}</p>
         </div>
         <div class="col l4 m6 s12">
-            <p class="flow-text center">Alle Texte können hier in unterschiedlichen Sprachen erstellt und übersetzt
-                werden.</p>
+            <p class="flow-text center">{{'MAIN_TEXT2'|translate}}</p>
         </div>
         <div class="col l4 m6 offset-m3 s12">
-            <p class="flow-text center">Zusätzlich können Statistiken angezeigt werden.</p>
+            <p class="flow-text center">{{'MAIN_TEXT3'|translate}}</p>
         </div>
     </div>
 </div>
