--- a/home/public/partials/register-tab.html
+++ b/home/public/partials/register-tab.html
@@ -2,32 +2,32 @@
     <div class="row">
         <div class="col s12 m6 offset-m6 pull-m6 input-field">
             <input  ng-model="user.email" id="email" type="email" required>
-            <label for="email">E-Mail</label>
+            <label for="email">{{'REGISTERTAB_MAIL'|translate}}</label>
         </div>
         <!--TODO: eventuell eine directive, die username asynchron auf existenz prüft-->
         <div class="col s12 m6 offset-m6 pull-m6 input-field">
             <input ng-model="user.username" id="username" type="text" required>
-            <label for="username">Username</label>
+            <label for="username">{{'REGISTERTAB_USERNAME'|translate}}</label>
         </div>
 
         <div class="col s12 m6 input-field">
             <input ng-model="user.name" id="forename" type="text" required>
-            <label for="forename">Name</label>
+            <label for="forename">{{'REGISTERTAB_NAME'|translate}}</label>
         </div>
         <div class="col s12 m6 input-field">
             <input ng-model="user.surname" id="surname" type="text" required>
-            <label for="surname">Surname</label>
+            <label for="surname">{{'REGISTERTAB_SURNAME'|translate}}</label>
         </div>
         <div class="col s12 m6 input-field">
             <input ng-model="user.password" id="password" type="password" required minlength="6">
-            <label for="password">Password</label>
+            <label for="password">{{'REGISTERTAB_PASSWORD'|translate}}</label>
         </div>
         <div class="col s12 m6 input-field">
             <input ng-model="confirmPassword" id="confirm_password" type="password" validate-password>
-            <label for="confirm_password">Confirm Password</label>
+            <label for="confirm_password">{{'REGISTERTAB_C'|translate}}</label>
         </div>
     </div>
     <div class="row">
-        <input class="waves-teal waves-effect btn right" ng-class="{disabled:!registerForm.$valid}" type="submit" value="Register">
+        <input class="waves-teal waves-effect btn right" ng-class="{disabled:!registerForm.$valid}" type="submit" value="{{'REGISTERTAB_REGISTERBTN'|translate}}">
     </div>
 </form>
