materialize is now a bower dependency, removed old files

--- a/home/public/css/stylesheet.css
+++ b/home/public/css/stylesheet.css
@@ -1,3 +1,19 @@
+/*
+sticky footer
+*/
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+.right.copyright {
+    margin-right: 16px;
+}
 
 /*
 show a red-line under invalid inputs that are focused or not empty
