--- a/home/public/partials/register-tab.html
+++ b/home/public/partials/register-tab.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col s12 m6 input-field">
             <input ng-model="confirmPassword" id="confirm_password" type="password" validate-password>
-            <label for="confirm_password">{{'REGISTERTAB_C'|translate}}</label>
+            <label for="confirm_password">{{'REGISTERTAB_CPASSWORD'|translate}}</label>
         </div>
     </div>
     <div class="row">
