--- a/home/public/partials/add.html
+++ b/home/public/partials/add.html
@@ -25,13 +25,13 @@
                     <div class="input-field col s3">
                         <select id="langselect_guide" ng-model="addCtrl.guidelines.lang">
                             <option value="" disabled selected>{{'ADD_LANGSELECT'|translate}}</option>
-                            <option value="de">{{'LANG_DE'|translate}}</option>
-                            <option value="en">{{'LANG_EN'|translate}}</option>
-                            <option value="fr">{{'LANG_FR'|translate}}</option>
+                            <option value="de_DE">{{'LANG_DE'|translate}}</option>
+                            <option value="en_US">{{'LANG_EN'|translate}}</option>
+                            <option value="fr_FR">{{'LANG_FR'|translate}}</option>
                         </select>
                     </div>
                     <div class="input-field col s3">
-                        <input type="checkbox" id="check_motd" ng-model="addCtrl.guideline.motd">
+                        <input type="checkbox" id="check_motd" ng-model="addCtrl.guidelines.motd_flag">
                         <label for="check_motd">{{'ADD_MOTD'|translate}}</label>
                     </div>
                     <div class="input-field col s3">
@@ -52,9 +52,9 @@
                     <div class="input-field col s4">
                         <select id="langselect_category" ng-model="addCtrl.categorylang">
                             <option value="" disabled selected>{{'ADD_LANGSELECT'|translate}}</option>
-                            <option value="de">{{'LANG_DE'|translate}}</option>
-                            <option value="en">{{'LANG_EN'|translate}}</option>
-                            <option value="fr">{{'LANG_FR'|translate}}</option>
+                            <option value="de_DE">{{'LANG_DE'|translate}}</option>
+                            <option value="en_US">{{'LANG_EN'|translate}}</option>
+                            <option value="fr_FR">{{'LANG_FR'|translate}}</option>
                         </select>
                     </div>
                     <div class="input-field col s4 push-s4">
