--- a/home/public/partials/header-navigation.html
+++ b/home/public/partials/header-navigation.html
@@ -27,8 +27,8 @@
                     <div class="modal-content">
                         <h4 class="black-text">Choose a language</h4>
                         <div class="collection">
-                            <a class="collection-item" ng-click="chooseLang('de')">{{'LANG_DE'|translate}}</a>
-                            <a class="collection-item" ng-click="chooseLang('en')">{{'LANG_EN'|translate}}</a>
+                            <a class="collection-item" ng-click="chooseLang('de_DE')">{{'LANG_DE'|translate}}</a>
+                            <a class="collection-item" ng-click="chooseLang('en_US')">{{'LANG_EN'|translate}}</a>
                         </div>
                     </div>
                 </div>
