--- a/home/public/partials/guidelist.html
+++ b/home/public/partials/guidelist.html
@@ -5,4 +5,21 @@
             <a ng-href="#/guide/{{guide._id}}" class="collection-item">{{(guide.guidelines|lang:lang)[0].text}}</a>
         </div>
     </ul>
+    <div class="row" ng-hide="loadedData">
+        <div class="center">
+            <div class="preloader-wrapper active">
+                <div class="spinner-layer spinner-yellow-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
