--- a/home/public/partials/list.html
+++ b/home/public/partials/list.html
@@ -7,4 +7,21 @@
             </a>
         </div>
     </ul>
+    <div class="row" ng-hide="loadedData">
+        <div class="center">
+            <div class="preloader-wrapper active">
+                <div class="spinner-layer spinner-yellow-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
